Sockets funcionando del lado del cliente(kotlin) y servidor(strapi). También lo reciben otras apps

--- a/backendStrapi/index.html
+++ b/backendStrapi/index.html
@@ -28,8 +28,8 @@
         //     console.log(data)
         // })
 
-        socket.on("test", data => {
-            console.log(data, "test")
+        socket.on("products", data => {
+            console.log(data, "products")
         })
     </script>
 </body>
