--- a/backendStrapi/index.html
+++ b/backendStrapi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,43 @@
 <body>
     <button onclick="console.clear()">Limpiar consola</button>
     <h1>hellow!</h1>
+    <div style="padding:0px 20px 20px; width: 240px; font-family: sans-serif; border: 1px solid #E5E7E9; box-shadow: 1px 1px 10px #999;">
+        <div style="background-color: #fff; width: 100%; border-bottom: 1px dashed #888;">
+            <center>
+                <h3 style="width:180px;color: #566573; border: 2px solid #566573; display: flex;">
+                    <span style="border: 1px solid #888; width: 100%; margin: 2px; padding: 1px;">Tienda Muebles</span>
+                </h3>
+            </center>
+        </div>
+        <br>
+        <div style="color:#888; font-size: .9em; border-bottom: 1px dashed #888;">
+            <table>
+                <tr>
+                    <td style="font-weight: bold;">
+                        Cliente:
+                    </td>
+                    <td>Nombre del Cliente</td>
+                </tr>
+                <tr>
+                    <td style="font-weight: bold;">
+                        Fecha:
+                    </td>
+                    <td>20/03/2023</td>
+                </tr>
+                <tr>
+                    <td style="font-weight: bold;">
+                        Orden #:
+                    </td>
+                    <td>200</td>
+                </tr>
+            </table>
+            <br>
+        </div>
+        <br>
+        <div>
+            <strong>Monto Total:</strong> L. 200.00
+        </div>
+    </div>
     <script>
         const socket = io('http://localhost:1337', {
             path: '/socket/v1',
